Added new css style

--- a/itproger/main/templates/main/layout.html
+++ b/itproger/main/templates/main/layout.html
@@ -20,18 +20,18 @@
 
 
 <!--Это тег для боковой панели-->
-<!--    <aside>-->
-<!--        <img src="{% static 'main/img/main_logo.jpg' %}" alt="Лого">-->
-<!--        <span class="logo">-->
-<!--            Olymp IT-->
-<!--        </span>-->
-<!--        <h3>Навигация</h3>-->
-<!--        <ul>-->
-<!--            <a href=""> <li><i class="fas fa-home"></i>Главная</li> </a>-->
-<!--            <a href=""> <li><i class="fas fa-square-info"></i>Про нас</li> </a>-->
-<!--            <a href=""> <li><i class="fas fa-paper-plane"></i>Контакты</li> </a>-->
-<!--        </ul>-->
-<!--    </aside>-->
+    <aside>
+        <img src="{% static 'main/img/main_logo.jpg' %}" alt="Лого">
+        <span class="logo">
+            Olymp IT
+        </span>
+        <h3>Навигация</h3>
+        <ul>
+            <a href=""> <li><i class="fas fa-home"></i>Главная</li> </a>
+            <a href=""> <li><i class="fas fa-square-info"></i>Про нас</li> </a>
+            <a href=""> <li><i class="fas fa-paper-plane"></i>Контакты</li> </a>
+        </ul>
+    </aside>
     <main>
             {% block content %}
             {% endblock %}
