--- a/itproger/main/templates/main/index.html
+++ b/itproger/main/templates/main/index.html
@@ -5,7 +5,10 @@
 {% endblock %}
 
 {% block content %}
-    <h1> главная страница </h1>
-    <p> Описание </p>
+    <div class="features">
+        <h1>Главная страница</h1>
+        <p>Вставьте текст</p>
+        <button class="btn btn-warning">На страницу про нас</button>
+    </div>
 {% endblock %}
 
