--- a/itproger/main/static/main/css/main.css
+++ b/itproger/main/static/main/css/main.css
@@ -46,12 +46,20 @@ aside ul li:hover, aside ul a:hover {
     transform: scale(1.2);
 }
 
+main img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25vh;
+    margin-top: 150px;
+}
+
 main .features {
     float: left;
     color: #fff;
-    margin-top: 250px;
+    margin-top: 100px;
     text-align: center;
-    width: 75%;
+    width: 100%;
 }
 
 main .features h1{
@@ -60,4 +68,22 @@ main .features h1{
 main .features p{
     max-width: 400px;
     margin: 20px auto;
+}
+
+main .features ul {
+    list-style: none;
+    list-style-position: outside;
+    margin-left: -30px;
+}
+
+main .features ul li {
+    color: #fff;
+    display: block;
+    margin-top: 20px;
+    transition: transform .6s ease;
+}
+main .features ul li:hover, aside ul a:hover {
+    color: #eb5959;
+    text-decoration: none;
+    transform: scale(1.2);
 }
